less: Fix popup menu wrapping

--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -43,6 +43,10 @@ article {
 	article blockquote {
 		display: inline-block;
 	}
+	ul {
+		word-wrap: normal;
+    	word-break: normal;
+	}
 }
 
 h3 {
